--- a/Publishing-Service-Management-Information-System/src/main/resources/templates/budget.html
+++ b/Publishing-Service-Management-Information-System/src/main/resources/templates/budget.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <style>
+            body{
+                color: slategray;
+            }
+        </style>
+    </head>
+    <body>
+        <p th:text="'Budget for: ' + ${budget.publicationId}"/>
+    </body>
 </html>
