--- a/Publishing-Service-Management-Information-System/src/main/resources/templates/contract.html
+++ b/Publishing-Service-Management-Information-System/src/main/resources/templates/contract.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org">
+    <head>
+    </head>
+    <body>
+    <div>
+        <h1> Introduction </h1>
+        <p> This publishing contract, the "contract", is entered into as of contract created date by and between , the "Publisher", and  , the "Author". This publishing contract governs the publication of the work </p>
+    </div>
+    <div>
+        <h1> Grants of rights </h1>
+        <p> Author grants  full right and title to the following, in perpetuity: </p>
+        <ul>
+            <li> The right to publish, sell, and profit from the listed works in all languages and formats in existence today and at any point in the future. </li>
+            <li> To create or devise modified, abridged, or derivative works based on the works listed. </li>
+        </ul>
+        <p> These rights are granted by   on behalf of him/herself and their successors, heirs, executors, and any other party who may attempt to lay claim to these rights at any point now or in the future. </p>
+        <p> Any rights not granted to  above remain with  . </p>
+        <p> The rights granted to  by   shall not be constrained by geographic territories and are considered global in nature. </p>
+    </div>
+    <div>
+        <h1> Author compensation </h1>
+        <p>  shall provide   with an advance against future royalties in the amount of advance amount.  This advance shall be paid to   as follows: </p>
+        <ul>
+        </ul>
+        <p>  agrees to provide the   with royalties as follows: </p>
+        <ul>
 
-</body>
+        </ul>
+    </div>
+    <div>
+        <h1> Publication </h1>
+        <p>  shall have the exclusive right to edit or modify the delivered materials at their discretion prior to publication. However,   shall have the right to review any modifications and grant approval prior to publication.
+            While   shall have the right to review and approve and changes to content, the work's format, cover design, and final artwork,  shall retain full right to manufacture, distribute, market, and sell the completed work as they deem necessary.
+            agrees to provide page proofs of the material prior to publication. These proofs shall include all content, including artwork.   agrees to review and return these proofs to  within 30 days. If   makes or requests changes to the content aside from typographical errors in excess of 5% of the typesetting cost, then   agrees to pay such costs to .
+            agrees that the works covered under this book publishing contract will be published within one year of delivery of the initial manuscript </p>
+        <p>  agrees to consult with   regarding marketing the published works, but reserves the right to make final decisions regarding sales and marketing of the works.   grants  the right to use  's name and likeness as they see fit for marketing purposes. </p>
+    </div>
+    <div>
+        <h1> Copyright </h1>
+        <p>  shall include a copyright notice in  's name on all published copies of the works in accordance with copyright regulations. </p>
+    </div>
+    <div>
+        <h1> Warranties and Indemnity </h1>
+        <p>   warrants that the works governed by this book publishing contract are their sole intellectual property, that no other similar agreements governing these works exist, and that the works are not in the public domain. </p>
+        <p>Additionally,   warrants that the works do not infringe on copyrights, trademarks, or other intellectual rights of any third parties. If the works governed by this book publishing contract contain statements presented as fact,   warrants that such statements are true and accurate.</p>
+        <p>Furthermore,   agrees to refrain from entering into agreements with third parties that conflict with the terms of this book publishing contract. </p>
+    </div>
+    <div>
+        <h1> General terms </h1>
+        <p> This book publishing contract represents the entire agreement between   and . </p>
+        <p> This contract may not be altered, amended, or otherwise modified except through written form requiring signature by both parties.</p>
+        <p> Should multiple individuals be considered   of the works governed by this book publishing contract, each of those individuals shall be liable for adhering to the terms of this contract.</p>
+        <p>  and   shall be granted an extension on any time-sensitive duties related to this book publishing contract should circumstance beyond their control interfere with their ability to execute their contractual obligations.</p>
+    </div>
+    <div>
+        <h1> Acceptance </h1>
+        <p> THEREFORE, having read and understood the terms of this book publishing contract,   and  (or their authorized representatives) hereby execute and enter into this contract with one another as of the dates below. </p>
+    </div>
+    </body>
 </html>
